--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -206,7 +206,7 @@ h3.profile-title {
     color: inherit;
 }
 
-.team-members {
+.team-details {
     margin: 5px 0 0;
     font-size: 14px;
     color: inherit;
@@ -214,8 +214,26 @@ h3.profile-title {
 .team-text {
     font-family: 'IBM Plex Serif', serif;
 }
+.shading {
+  box-shadow: inset 0 5px 5px -5px rgba(0, 0, 0, 0.2), inset 5px 0 5px -5px rgba(0, 0, 0, 0.2);
+}
 .pfp {
-  font-size: 50px;
+  font-size: 40px;
+}
+
+
+/*
+Fade in transition
+*/
+.fade-in {
+  opacity: 0;
+  transform: translateY(-20px);
+  transition: opacity 0.4s ease, transform 0.4s ease;
+}
+
+.fade-in.visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 
