--- a/static/css/share_file.css
+++ b/static/css/share_file.css
@@ -1,29 +1,63 @@
 .thumbnail-container {
     display: flex;
     flex-wrap: wrap;
+    border-radius: 20px;
+    max-height: 280px; 
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+.thumbnail-wrapper {
+    opacity: 0;
+    animation: slide 1.2s ease forwards;
 }
 .thumbnail {
-    display: inline-block;
     cursor: pointer;
-    margin-right: 10px; 
-    margin-bottom: 10px;
     text-align: center;
     border: 2px solid transparent;
-    border-radius: 10px;
+    border-radius: 7px;
     transition: border-color 0.3s, box-shadow 0.3s;
 }
 .thumbnail:hover {
-    border-color: lightblue;
+    border-color: rgba(0, 0, 255, 0.2);
     box-shadow: 5px 4px 0 0 rgba(0, 0, 0, 0.3);
 }
 .thumbnail.selected {
-    border-color: lightblue;
-    box-shadow: 5px 4px 0 0 rgba(0, 0, 0, 0.3), inset 0 0 0 1000px rgba(173, 216, 230, 0.3);
+    border-color: rgba(0, 0, 255, 0.2);
+    box-shadow: 5px 4px 0 0 rgba(0, 0, 0, 0.3), inset 0 0 0 1000px rgba(0, 0, 255, 0.1);
 }
-.pdf-image {
-    width: 70px; 
-    height: 80px;
+@keyframes slide {
+    0% {
+      transform: translateX(100%);
+      opacity: 0;
+    }
+    100% {
+      transform: translateX(0);
+      opacity: 1;
+    }
 }
+
+/* width of rows inside share page */
+@media (max-width: 767px) { /* small screens */
+    .row-width {
+        width: 100%;
+        margin: 0 auto;
+    }
+}
+@media (min-width: 768px) and (max-width: 991px) { /* medium screens */
+    .row-width {
+        width: 75%;
+        margin: 0 auto;
+    }
+}
+@media (min-width: 992px) { /* large screens */
+    .row-width {
+        width: 50%;
+        margin: 0 auto;
+    }
+}
+
+
+
 .file-name {
     margin-top: 5px;
 }
@@ -45,6 +79,7 @@
     border: 2px solid transparent;
     border-radius: 10px;
     transition: border-color 0.3s, background-color 0.3s;
+    height: 100px;
 }
 .search-filter:hover {
     border-color: lightblue;
@@ -52,4 +87,11 @@
 .search-filter.selected {
     border-color: lightblue;
     background-color: rgba(173, 216, 230, 0.3);
+}
+
+.username {
+    font-size: 16px;
+}
+.pfp {
+    font-size: 30px;
 }
