--- a/tasks/templates/list_team.html
+++ b/tasks/templates/list_team.html
@@ -32,7 +32,7 @@
         </div>
         <div class="row">
             <div class="col-sm-12 col-md-9 col-lg-6">
-                <h1 class="mt-4 mb-0">Groups You Belong To</h1>
+                <h1 class="team-text mt-4 mb-0">Groups You Belong To</h1>
                 <ul class="teams-list">
                     {% if team_joined %}
                         {% for team in team_joined %}
@@ -40,7 +40,7 @@
                                 <a href="{% url 'team_detail' team_id=team.id %}" class="team-link">
                                     <div class="team-box">
                                         <h3 class="team-name team-text">{{ team.name }}</h3>
-                                        <p class="team-members team-text">Members: {{ team.members.count }}</p>
+                                        <p class="team-details team-text">Members: {{ team.members.count }}&nbsp;&nbsp;&nbsp;&nbsp;Shared Files: {{team.shared_uploads.count}}</p>
                                     </div>
                                 </a>
                             </li>
