--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -221,6 +221,45 @@ h3.profile-title {
   font-size: 40px;
 }
 
+/* CSS design to team detail page */
+body {
+  overflow-x: hidden;
+}
+.rectangle {
+  width: 150px;
+  height: 700px;
+  background-color: rgb(0, 102, 255);
+  position: absolute;
+  top: 0;
+  left: 0;
+  animation: diagonal-slide 0.8s cubic-bezier(0, 0.6, 0.3, 1.1) forwards;
+  z-index: -1;
+  opacity: 0%;
+}
+.rectangle:nth-child(1) {
+  --index: 1;
+  animation-delay: 0.3s;
+}
+.rectangle:nth-child(2) {
+  --index: 2;
+  animation-delay: 0.2s;
+}
+.rectangle:nth-child(3) {
+  --index: 3;
+  animation-delay: 0.1s;
+}
+
+@keyframes diagonal-slide {
+  0% {
+      transform: translateX(-200%) skew(-60deg);
+      opacity: calc(5% * (var(--index)));
+  }
+  100% {
+      transform: translateX(calc(48% - (150px * (var(--index) - 1)))) skew(-60deg);
+      opacity: calc(5% * (var(--index)));
+  }
+}
+
 
 /*
 Fade in transition
