--- a/tasks/templates/team_detail.html
+++ b/tasks/templates/team_detail.html
@@ -33,7 +33,7 @@
                     </div>
                     {% endfor %}
                     <div class="col-sm-6 col-md-4 col-lg-3 d-flex justify-content-center fade-in">
-                        <button id="InvitePopup" class="btn btn-primary team-text fs-5 w-50 h-75">Invite<br>User</button>
+                        <button id="InvitePopup" class="btn btn-primary team-text fs-5 w-50 h-75 team-detail-button">Invite<br>User</button>
                     </div>
                 </div>
                 <div class="row">
@@ -126,7 +126,7 @@
                 <div class="container p-2">
                     <h1 class="text-center team-text">Actions</h1>
                     <div class="text-center team-text">
-                        <a class="btn btn-primary" data-bs-toggle="offcanvas" data-bs-target="#uploadTeamPdf" aria-controls="uploadTeamPdf">Upload to Team Folder</a>
+                        <a class="btn btn-primary team-detail-button" data-bs-toggle="offcanvas" data-bs-target="#uploadTeamPdf" aria-controls="uploadTeamPdf">Upload to Team Folder</a>
                     </div>
                 </div>
             </div>
