--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -66,6 +66,11 @@
                             <button type="button" class="btn btn-info equal-size open-modal" data-upload-id="{{ upload.id }}" data-bs-target="#renameModal_{{ upload.id }}" data-bs-toggle="modal">
                                 <svg t="1709502404971" class="icon" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="5355" width="20" height="20"><path d="M290.27 614.65l-12.19 122.39c-0.81 8.04 5.06 15.21 13.09 16.02 0.51 0.05 1.02 0.08 1.54 0.07l121.91-12.68a13.16 13.16 0 0 0 9.26-3.9L834.95 324.5S706.22 193.33 706.21 193.33L294.66 605.87c-2.4 2.36-3.94 5.45-4.39 8.78zM949.52 159.18l-0.46-0.46-78.02-78.51a36.582 36.582 0 0 0-26.82-10.73 36.039 36.039 0 0 0-25.84 10.73l-71.68 74.61 130.68 130.2 71.68-74.12c14.41-14.16 14.61-37.31 0.46-51.72z" p-id="5356"></path><path d="M875.43 488.36c-26.93 0-48.76 21.83-48.76 48.76V857H161.54V232.35h335.98c26.93 0 48.76-21.83 48.76-48.76s-21.83-48.77-48.76-48.77H156.18c-0.49 0-0.98 0-1.47 0.01-50.9 0.81-91.5 42.72-90.69 93.61v633.92c0 50.9 41.26 92.16 92.16 92.16h676.34c50.52-0.27 91.41-41.16 91.68-91.67V537.12c-0.01-26.93-21.84-48.76-48.77-48.76z" p-id="5357"></path></svg>
                             </button>
+
+                            <!-- Unshare PDF -->
+                            <button type="button" class="btn btn-primary equal-size open-modal" data-upload-id="{{ upload.id }}" data-bs-toggle="modal" data-bs-target="#unshareModal_{{ upload.id }}">
+                                <i class="bi bi-person-dash-fill"></i>
+                            </button>
                         </div>
                     </div>
                     {% endfor %}
@@ -74,7 +79,6 @@
         </div>
     </div>
 </div>
-
 
 {% for upload in uploads %}
 <div class="modal fade" id="commentModal_{{ upload.id }}" tabindex="-1" role="dialog" aria-labelledby="commentModalLabel" aria-hidden="true">
@@ -122,7 +126,9 @@
 </div>
 {% endfor %}
 
-
+{% for upload in uploads %}
+    {% include 'unshare_file.html' with upload=upload %}
+{% endfor %}
 
 
 
@@ -180,13 +186,13 @@
 {#        </div>#}
 {##}
 {#        {% endfor %}#}
-{#        {% if uploads %}#}
-{#            <div class="col-lg-7 col-sm-6">#}
-{#                {% include 'unshare_file.html' with uploads=uploads %}#}
-{#            </div>#}
-{#        {% endif %}#}
 {#    </div>#}
 
+{% if uploads %}
+    <div class="col-lg-7 col-sm-6">
+        {% include 'unshare_file.html' with uploads=uploads %}
+    </div>
+{% endif %}
 <!--Really bad implementation of this-->
 {% for upload in uploads %}
 <div class="offcanvas offcanvas-end" tabindex="-1" id="sharePDFPopup{{ upload.id }}" aria-labelledby="sharePDFPopup{{ upload.id }}">
