--- a/tasks/templates/share_file.html
+++ b/tasks/templates/share_file.html
@@ -15,6 +15,7 @@
         </select>
         <h2 class=""> Select file: </h2>
         <div class="thumbnail-container p-2 mt-3 border bg-white">
+        {% if uploads%}
           {% for upload in uploads %}
           <div class="thumbnail-wrapper col-12 mb-2">
             <div class="thumbnail p-1 d-flex align-items-center" file-id="{{ upload.id }}">
@@ -22,7 +23,12 @@
               <div class="file-name fs-6 me-2">{{ upload.file.name }}</div> 
             </div>
           </div>
-          {% endfor %}  
+          {% endfor %}
+        {% else %}
+          <div class="thumbnail-wrapper col-12">
+            <span> You must upload a file before sharing. </span>
+          </div>
+        {% endif %}  
         </div>
       </div>
     </div>
