--- a/tasks/templates/filelist.html
+++ b/tasks/templates/filelist.html
@@ -26,21 +26,25 @@
                     {% for upload in uploads %}
                     <div class="flex-column flex-md-row list-item" aria-current="true">
                         <div class="text-list-item p-3 gap-2 w-100">
-                            <a href="{{ upload.file.url }}" class="list-group-item" data-upload-time="{{ upload.uploaded_at }}" target="_blank">
-                                <div class="item-content">
-                                    <div class="d-flex flex-wrap w-100 justify-content-between align-items-center">
-                                        <div class="mb-1">
-                                            <img src="{% static '/image/pdf_icon_svg.png' %}" alt="pdf" width="32" height="32" class="rounded-circle flex-shrink-0">
+                            <form method="post" action="{%  url 'pdf_viewer' %}" class="d-inline" target="_blank">
+                                {% csrf_token %}
+                                <input type="hidden" name="upload_id" value="{{ upload.id }}">
+                                <button type="submit" class="list-group-item" data-upload-time="{{ upload.uploaded_at }}">
+                                    <div class="item-content">
+                                        <div class="d-flex flex-wrap w-100 justify-content-between align-items-center">
+                                            <div class="mb-1">
+                                                <img src="{% static '/image/pdf_icon_svg.png' %}" alt="pdf" width="32" height="32" class="rounded-circle flex-shrink-0">
+                                            </div>
+                                            <small class="opacity-50 justify-content-md-end" id="uploadTime">Uploaded {{ upload.upload_time_difference}}</small>
+
                                         </div>
-                                        <small class="opacity-50 justify-content-md-end" id="uploadTime">Uploaded {{ upload.upload_time_difference}}</small>
+                                        <h6 class="mb-0"><strong>{{ upload.get_simple_file_name }}</strong></h6>
+                                        <p class="mb-0 opacity-75"><strong>Uploaded on: </strong><span class="upload-time">{{ upload.uploaded_at }}</span></p>
+                                        <p class="mb-0 opacity-75"><strong>Comment:</strong>{{ upload.comments }}</p>
 
                                     </div>
-                                    <h6 class="mb-0"><strong>{{ upload.get_simple_file_name }}</strong></h6>
-                                    <p class="mb-0 opacity-75"><strong>Uploaded on: </strong><span class="upload-time">{{ upload.uploaded_at }}</span></p>
-                                    <p class="mb-0 opacity-75"><strong>Comment:</strong>{{ upload.comments }}</p>
-
-                                </div>
-                            </a>
+                                </button>
+                            </form>
                         </div>
 
 
