--- a/tasks/templates/viewer.html
+++ b/tasks/templates/viewer.html
@@ -323,8 +323,21 @@
         }
 
         // Function to navigate to the destination
-        async function navigateToDestination(destination, pdf) {
-            // TODO: Implement the navigateToDestination function
+        async function navigateToDestination(dest, pdf) {
+            pdf.getDestination(dest).then(destination => {
+                if (destination) {
+                    pdf.getPageIndex(destination[0]).then(pageIndex => {
+                      const actualPage = pageIndex + 1;
+                      console.log("Section ", dest ," is on page", actualPage);
+                      const viewer = document.getElementById("viewer");
+                      const pageHeight = viewer.scrollHeight / pdf.numPages;
+                      viewer.scrollTop = (actualPage - 1) * pageHeight;
+                      // Now can only go to the page, cannot go to precise location
+                    });
+                } else {
+                    console.log("Destination 'section2' not found");
+                }
+            });
         }
 	</script>
 <script>
